--- a/lead/templates/lead/add_lead.html
+++ b/lead/templates/lead/add_lead.html
@@ -6,13 +6,19 @@
     <div class="py-6 px-6">
         <h1 class="text-xl">Add Lead</h1>
 
-        {% comment %} 'action="."' indicates the PAGE which we are on (?) {% endcomment %}
-        <form method="post" action=".">
-            {% csrf_token %}
+        {% if team.plan.max_leads > team.leads.all|length %}
+            {% comment %} 'action="."' indicates the PAGE which we are on (?) {% endcomment %}
+            <form method="post" action=".">
+                {% csrf_token %}
 
-            {{ form.as_p }}
+                {{ form.as_p }}
 
-            <button class="py-4 px-8 bg-teal-500 text-white rounded-xl">Submit</button>
-        </form>
+                <button class="py-4 px-8 bg-teal-500 text-white rounded-xl">Submit</button>
+            </form>
+        {% else %}
+            <div class="mt-6 px-6 py-4 bg-red-400 rounded-xl text-white">
+                Your team have has reached a maximum number of leads. Your owner must upgrade your plan.
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
