--- a/lead/templates/lead/lead_detail.html
+++ b/lead/templates/lead/lead_detail.html
@@ -25,12 +25,17 @@
         <p class="mb-6">{{ lead.modified_at|date:"d-M-Y H:i" }}</p>
 
         <hr class="my-4">
+
+        {% comment %} An invisible form that handles Lead deletion. When we click "Delete" button, we are submitting this form. {% endcomment %}
+        <form id="lead_delete_form" method="post" action="{% url 'leads:delete' lead.id %}">
+            {% csrf_token %}
+        </form>
         
         <a href="{% url 'leads:convert' lead.id %}" class="py-2 px-4 rounded-xl bg-blue-500 text-white">Convert to client</a>
 
         <a href="{% url 'leads:edit' lead.id %}" class="py-2 px-4 rounded-xl bg-teal-500 text-white">Edit</a>
 
-        <a href="{% url 'leads:delete' lead.id %}" class="py-2 px-4 rounded-xl bg-red-500 text-white">Delete</a>
+        <a href="#" onclick="document.getElementById('lead_delete_form').submit();" class="py-2 px-4 rounded-xl bg-red-500 text-white">Delete</a>
         
         <hr class="my-4">
 
