--- a/lead/templates/lead/lead_form.html
+++ b/lead/templates/lead/lead_form.html
@@ -1,12 +1,12 @@
 {% extends 'core/base.html' %}
 
-{% block title %}Add Lead{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block content %}
     <div class="py-6 px-6">
-        <h1 class="text-xl">Add Lead</h1>
+        <h1 class="text-xl">{{ title }}</h1>
 
-        {% if team.plan.max_leads > team.leads.all|length %}
+        {% if team.plan.max_leads > team.leads.count or title == 'Edit lead' %}
             {% comment %} 'action="."' indicates the PAGE which we are on (?) {% endcomment %}
             <form method="post" action=".">
                 {% csrf_token %}
