--- a/lead/templates/lead/lead_list.html
+++ b/lead/templates/lead/lead_list.html
@@ -5,16 +5,16 @@
 {% block content %}
     <div class="py-6 px-6">
         <h1 class="mb-4 text-xl">Leads</h1>
-        <a href="{% url 'leads:add_lead' %}" class="inline-block py-4 px-6 bg-teal-600 rounded-xl text-white">Add Lead</a>
+        <a href="{% url 'leads:add' %}" class="inline-block py-4 px-6 bg-teal-600 rounded-xl text-white">Add Lead</a>
 
-        {% if leads %}
+        {% if object_list %}
 
             <div class="mt-6 flex justify-between">
                 <p class="py-4 px-2 bg-gray-200 font-semibold w-full">Name</p>
                 <p class="py-4 px-2 bg-gray-200 font-semibold w-full">Priority</p>
                 <p class="py-4 px-2 bg-gray-200 font-semibold w-full">Status</p>
             </div>
-            {% for lead in leads %}
+            {% for lead in object_list %}
                 <div class="flex justify-between">
                     {% comment %} Using DJ property 'cycle' to make every second paragraph grey color {% endcomment %}
                     <p class="py-2 px-2 w-full {% cycle 'bg-gray-100' '' %}">
