--- a/client/templates/client/clients_detail.html
+++ b/client/templates/client/clients_detail.html
@@ -23,6 +23,28 @@
         <a href="{% url 'clients:edit' client.id %}" class="py-2 px-4 rounded-xl bg-teal-500 text-white">Edit</a>
 
         <a href="{% url 'clients:delete' client.id %}" class="py-2 px-4 rounded-xl bg-red-500 text-white">Delete</a>
+
+        <hr class="my-4">
+
+        <h2 class="mb-6 text-xl">Comments</h2>
+
+        <div class="space-y-4">
+            {% for comment in client.comments.all %}
+                <div class="bg-gray-100 p-6 rounded-xl">
+                    <p class="mb-2"><strong>{{ comment.created_by }}</strong> @ {{ comment.created_at }}</p>
+                    {{ comment.content }}
+                </div>
+            {% endfor %}
+        </div>
+
+        <form method="post" action="{% url 'clients:add_comment' client.id %}">
+            {% csrf_token %}
+
+            {% comment %} 'as_p' --> "As paragraph" {% endcomment %}
+            {{ form.as_p }}
+
+            <button class="py-2 px-4 rounded-xl bg-blue-500 text-white">Submit</button>
+        </form>
         
         <hr class="my-4">
 
