--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -16,6 +16,8 @@
 
             <div class="space-x-4">
                 <a href="{% url 'about' %}" class="text-white">About</a>
+                {% comment %} 'team' is pulled from 'settings.py > TEMPLATES' and 'team > context_processors.py' {% endcomment %}
+                <a href="#" class="text-white">{{ team.name }}</a>
                 {% comment %} 'is_authenticated' - is a property on the User. {% endcomment %}
                 {% if request.user.is_authenticated %}
                     <a href="{% url 'dashboard:index' %}" class="py-4 px-6 bg-teal-600 rounded-xl text-white">Dashboard</a>
