--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -11,26 +11,8 @@
         <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
-        <nav class="py-6 px-6 flex justify-between bg-teal-500">
-            <a href="/" class="text-white">Teal CRM</a>
-
-            <div class="space-x-4">
-                <a href="{% url 'about' %}" class="text-white">About</a>
-                {% comment %} 'active_team' is pulled from 'team > context_processors.py' and 'settings.py > TEMPLATES'{% endcomment %}
-                <a href="{% url 'team:detail' active_team.id %}" class="text-white">{{ active_team.name }}</a>
-                {% comment %} 'is_authenticated' - is a property on the User. {% endcomment %}
-                {% if request.user.is_authenticated %}
-                    <a href="{% url 'dashboard:index' %}" class="py-4 px-6 bg-teal-600 rounded-xl text-white">Dashboard</a>
-                    <a href="{% url 'leads:list' %}" class="py-4 px-6 bg-teal-600 rounded-xl text-white">Leads</a>
-                    <a href="{% url 'clients:list' %}" class="py-4 px-6 bg-teal-600 rounded-xl text-white">Clients</a>
-                    <a href="{% url 'userprofile:myaccount' %}" class="py-4 px-6 bg-teal-800 rounded-xl text-white">My account</a>
-                {% else %}
-                    <a href="{% url 'login' %}" class="py-4 px-6 bg-teal-600 rounded-xl text-white">Log in</a>
-                    <a href="{% url 'userprofile:signup' %}" class="py-4 px-6 bg-teal-300 rounded-xl text-white">Sign up</a>
-                {% endif %}
-                
-            </div>
-        </nav>
+        {% comment %} <nav> is moved to ...> partials > nav.html  {% endcomment %}
+        {% include 'core/partials/nav.html' %}
 
         {% if messages %}
             <div class="py-6 px-6">
@@ -45,8 +27,6 @@
         {% block content %}
         {% endblock %}
 
-        <footer class="py-8 text-center bg-gray-200">
-            <p class="text-xs text-gray-700">Copyright (c) 2022 - Teal CRM</p>
-        </footer>
+        {% include 'core/partials/footer.html' %}
     </body>
 </html>
